# promprint-matchmaker

./: .env.example  README.md  main.py  pyproject.toml
lib/: helpers.py  typesense_search.py
src/cli/: n_gram_list.py  publisher_index.py  titles_match.py
src/lib/: helpers.py  matching.py  n_gram.py
src/matchmaker/: main.py
tests/: test_helpers.py  test_main.py  test_n_gram_list.py  test_publisher_index.py  test_typesense_search.py
tests/test_files/: bad_file.txt  test_collection_short.tsv  test_docs.tsv  test_publisher_index.csv  test_register_cleaned.csv  test_register_export.csv  test_register_no_publisher.csv  test_register_short.csv
