[project]
name = "promprint-matchmaker"
dynamic = ["version"]
description = " earch algorithms for matching book title strings across different registers for the Promprint project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "thefuzz>=0.22.1",
    "typesense>=1.3.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"