[project]
name = "promprint-matchmaker"
dynamic = ["version"]
description = "Search algorithms for matching book title strings across different registers for the Promprint project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "thefuzz>=0.22.1",
    "typesense>=1.3.0",
]

[project.scripts]
mm = "matchmaker.main:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/matchmaker"]
